@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.sql.Timestamp;
 import java.time.Clock;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -20,6 +21,7 @@ import java.util.function.Function;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.pmiops.workbench.access.AccessTierService;
 import org.pmiops.workbench.actionaudit.auditors.BillingProjectAuditor;
 import org.pmiops.workbench.cdr.CdrVersionContext;
@@ -32,6 +34,8 @@ import org.pmiops.workbench.db.dao.UserDao;
 import org.pmiops.workbench.db.dao.UserRecentWorkspaceDao;
 import org.pmiops.workbench.db.dao.UserService;
 import org.pmiops.workbench.db.dao.WorkspaceDao;
+import org.pmiops.workbench.db.model.DbAccessTier;
+import org.pmiops.workbench.db.model.DbCdrVersion;
 import org.pmiops.workbench.db.model.DbCohort;
 import org.pmiops.workbench.db.model.DbConceptSet;
 import org.pmiops.workbench.db.model.DbDataset;
@@ -48,7 +52,6 @@ import org.pmiops.workbench.firecloud.FireCloudService;
 import org.pmiops.workbench.google.CloudBillingClient;
 import org.pmiops.workbench.initialcredits.InitialCreditsService;
 import org.pmiops.workbench.mail.MailService;
-import org.pmiops.workbench.model.BillingStatus;
 import org.pmiops.workbench.model.FeaturedWorkspaceCategory;
 import org.pmiops.workbench.model.UserRole;
 import org.pmiops.workbench.model.Workspace;
@@ -71,6 +74,7 @@ import org.pmiops.workbench.utils.mappers.FirecloudMapper;
 import org.pmiops.workbench.utils.mappers.UserMapper;
 import org.pmiops.workbench.utils.mappers.WorkspaceMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -81,6 +85,7 @@ import org.springframework.transaction.annotation.Transactional;
  * <p>This needs to implement an interface to support Transactional
  */
 @Service
+@Primary
 public class WorkspaceServiceImpl implements WorkspaceService {
 
   protected static final int RECENT_WORKSPACE_COUNT = 4;
@@ -187,6 +192,12 @@ public class WorkspaceServiceImpl implements WorkspaceService {
   }
 
   @Override
+  public List<WorkspaceResponse> getWorkspacesAsService() {
+    return workspaceMapper.toApiWorkspaceResponseList(
+        workspaceDao, fireCloudService.getWorkspacesAsService(), initialCreditsService);
+  }
+
+  @Override
   public String getPublishedWorkspacesGroupEmail() {
     // All users with CT access also have RT access, so we know that any user with access to
     // workspaces will be a member of the RT Auth Domain Group.  Therefore, we can use this group
@@ -206,7 +217,7 @@ public class WorkspaceServiceImpl implements WorkspaceService {
   @Override
   public WorkspaceResponse getWorkspace(String workspaceNamespace, String workspaceTerraName) {
     DbWorkspace dbWorkspace = workspaceDao.getRequired(workspaceNamespace, workspaceTerraName);
-    validateWorkspaceTierAccess(dbWorkspace);
+    workspaceAuthService.validateWorkspaceTierAccess(dbWorkspace);
 
     RawlsWorkspaceResponse fcResponse;
     RawlsWorkspaceDetails fcWorkspace;
@@ -343,20 +354,25 @@ public class WorkspaceServiceImpl implements WorkspaceService {
     Map<String, RawlsWorkspaceAccessEntry> emailToRole =
         workspaceAuthService.getFirecloudWorkspaceAcl(workspaceNamespace, firecloudName);
 
-    List<UserRole> userRoles = new ArrayList<>();
-    for (Map.Entry<String, RawlsWorkspaceAccessEntry> entry : emailToRole.entrySet()) {
-      // Filter out groups
-      DbUser user = userDao.findUserByUsername(entry.getKey());
-      if (user == null) {
-        log.log(Level.WARNING, "No user found for " + entry.getKey());
-      } else {
-        userRoles.add(userMapper.toApiUserRole(user, entry.getValue()));
-      }
-    }
-    return userRoles.stream()
+    var userMap = userDao.getUsersMappedByUsernames(emailToRole.keySet());
+
+    return emailToRole.entrySet().stream()
+        .flatMap(
+            entry -> {
+              String email = entry.getKey();
+              RawlsWorkspaceAccessEntry acl = entry.getValue();
+              DbUser user = userMap.get(entry.getKey());
+              // Filter out groups
+              if (user == null) {
+                log.log(Level.WARNING, "No user found for " + email);
+                return Stream.empty();
+              } else {
+                return Stream.of(userMapper.toApiUserRole(user, acl));
+              }
+            })
         .sorted(
             Comparator.comparing(UserRole::getRole).thenComparing(UserRole::getEmail).reversed())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -366,26 +382,6 @@ public class WorkspaceServiceImpl implements WorkspaceService {
     List<DbUserRecentWorkspace> userRecentWorkspaces =
         userRecentWorkspaceDao.findByUserIdOrderByLastAccessDateDesc(userId);
     return pruneInaccessibleRecentWorkspaces(userRecentWorkspaces, userId);
-  }
-
-  /**
-   * Throw ForbiddenException if logged in user doesnt have the same Tier Access as that of
-   * workspace
-   *
-   * @param dbWorkspace
-   */
-  private void validateWorkspaceTierAccess(DbWorkspace dbWorkspace) {
-    String workspaceAccessTier = dbWorkspace.getCdrVersion().getAccessTier().getShortName();
-
-    List<String> accessTiers = accessTierService.getAccessTierShortNamesForUser(userProvider.get());
-
-    if (!accessTiers.contains(workspaceAccessTier)) {
-      throw new ForbiddenException(
-          String.format(
-              "User with username %s does not have access to the '%s' access tier required by "
-                  + "workspace '%s'",
-              userProvider.get().getUsername(), workspaceAccessTier, dbWorkspace.getName()));
-    }
   }
 
   private List<DbUserRecentWorkspace> pruneInaccessibleRecentWorkspaces(
@@ -507,14 +503,7 @@ public class WorkspaceServiceImpl implements WorkspaceService {
       DbUser creator = workspace.getCreator();
       boolean hasInitialCreditsRemaining =
           initialCreditsService.userHasRemainingFreeTierCredits(creator);
-      workspace.setBillingStatus(
-          hasInitialCreditsRemaining ? BillingStatus.ACTIVE : BillingStatus.INACTIVE);
       workspace.setInitialCreditsExhausted(!hasInitialCreditsRemaining);
-      workspace.setInitialCreditsExpired(initialCreditsService.areUserCreditsExpired(creator));
-    } else {
-      // At this point, we can assume that a user provided billing account is open since we
-      // throw a BadRequestException if a closed one is provided
-      workspace.setBillingStatus(BillingStatus.ACTIVE);
     }
   }
 
@@ -529,6 +518,11 @@ public class WorkspaceServiceImpl implements WorkspaceService {
     return workspaceDao
         .getByNamespace(workspaceNamespace)
         .orElseThrow(() -> new NotFoundException("Workspace not found: " + workspaceNamespace));
+  }
+
+  @Override
+  public List<DbWorkspace> lookupWorkspacesByNamespace(Collection<String> workspaceNamespaces) {
+    return workspaceDao.getByWorkspaceNamespaceIn(workspaceNamespaces);
   }
 
   @Override
@@ -619,7 +613,6 @@ public class WorkspaceServiceImpl implements WorkspaceService {
         .forEach(
             ws -> {
               ws.setInitialCreditsExhausted(exhausted);
-              ws.setBillingStatus(exhausted ? BillingStatus.INACTIVE : BillingStatus.ACTIVE);
               workspaceDao.save(ws);
             });
   }
@@ -653,12 +646,53 @@ public class WorkspaceServiceImpl implements WorkspaceService {
 
   @Override
   public List<DbUser> getWorkspaceOwnerList(DbWorkspace dbWorkspace) {
-    return getFirecloudUserRoles(
-            dbWorkspace.getWorkspaceNamespace(), dbWorkspace.getFirecloudName())
-        .stream()
-        .filter(userRole -> userRole.getRole() == WorkspaceAccessLevel.OWNER)
-        .map(UserRole::getEmail)
-        .map(userService::getByUsernameOrThrow)
-        .toList();
+    return userDao.findUsersByUsernameIn(
+        getFirecloudUserRoles(dbWorkspace.getWorkspaceNamespace(), dbWorkspace.getFirecloudName())
+            .stream()
+            .filter(userRole -> userRole.getRole() == WorkspaceAccessLevel.OWNER)
+            .map(UserRole::getEmail)
+            .toList());
+  }
+
+  @Override
+  public RawlsWorkspaceDetails createWorkspace(Workspace workspace, DbCdrVersion cdrVersion) {
+    DbAccessTier accessTier = cdrVersion.getAccessTier();
+    String billingProject = createTerraBillingProject(accessTier);
+    String firecloudName = FireCloudService.toFirecloudName(workspace.getName());
+
+    return fireCloudService.createWorkspace(
+        billingProject, firecloudName, accessTier.getAuthDomainName());
+  }
+
+  @Override
+  public RawlsWorkspaceDetails cloneWorkspace(
+      String fromWorkspaceNamespace,
+      String fromWorkspaceId,
+      Workspace toWorkspace,
+      DbCdrVersion cdrVersion) {
+    // Note: please keep any initialization logic here in sync with createWorkspace().
+    DbAccessTier accessTier = cdrVersion.getAccessTier();
+    String billingProject = createTerraBillingProject(accessTier);
+    String firecloudName = FireCloudService.toFirecloudName(toWorkspace.getName());
+
+    return fireCloudService.cloneWorkspace(
+        fromWorkspaceNamespace,
+        fromWorkspaceId,
+        billingProject,
+        firecloudName,
+        accessTier.getAuthDomainName());
+  }
+
+  /** Creates a Terra (FireCloud) Billing project and adds the current user as owner. */
+  private String createTerraBillingProject(DbAccessTier accessTier) {
+    DbUser user = userProvider.get();
+    String billingProject = fireCloudService.createBillingProjectName();
+    fireCloudService.createAllOfUsBillingProject(billingProject, accessTier.getServicePerimeter());
+
+    // We use the AoU Application Service Account to create the billing account, then add the user
+    // as an additional owner.  In this way, we can make sure that the AoU App SA is an owner on
+    // all billing projects.
+    fireCloudService.addOwnerToBillingProject(user.getUsername(), billingProject);
+    return billingProject;
   }
 }
