@@ -1,6 +1,5 @@
 package org.pmiops.workbench.workspaces.resources;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
@@ -14,6 +13,7 @@ import org.pmiops.workbench.db.model.DbDataset;
 import org.pmiops.workbench.db.model.DbWorkspace;
 import org.pmiops.workbench.exceptions.BadRequestException;
 import org.pmiops.workbench.exceptions.ServerErrorException;
+import org.pmiops.workbench.initialcredits.InitialCreditsService;
 import org.pmiops.workbench.model.CohortReview;
 import org.pmiops.workbench.model.ResourceType;
 import org.pmiops.workbench.model.WorkspaceAccessLevel;
@@ -27,16 +27,19 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
   private final ConceptSetService conceptSetService;
   private final DataSetDao dataSetDao;
   private final WorkspaceResourceMapper workspaceResourceMapper;
+  private final InitialCreditsService initialCreditsService;
 
   @Autowired
   public WorkspaceResourcesServiceImpl(
       CohortReviewService cohortReviewService,
       ConceptSetService conceptSetService,
       DataSetDao dataSetDao,
+      InitialCreditsService initialCreditsService,
       WorkspaceResourceMapper workspaceResourceMapper) {
     this.cohortReviewService = cohortReviewService;
     this.conceptSetService = conceptSetService;
     this.dataSetDao = dataSetDao;
+    this.initialCreditsService = initialCreditsService;
     this.workspaceResourceMapper = workspaceResourceMapper;
   }
 
@@ -46,12 +49,12 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
       WorkspaceAccessLevel workspaceAccessLevel,
       List<ResourceType> resourceTypes) {
     List<ResourceType> supportedTypes =
-        ImmutableList.of(
+        List.of(
             ResourceType.COHORT,
             ResourceType.COHORT_REVIEW,
             ResourceType.CONCEPT_SET,
             ResourceType.DATASET);
-    if (resourceTypes.size() == 0) {
+    if (resourceTypes.isEmpty()) {
       throw new BadRequestException("Must provide at least one resource type");
     }
 
@@ -64,7 +67,7 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
               .map(
                   cohort ->
                       workspaceResourceMapper.fromDbCohort(
-                          dbWorkspace, workspaceAccessLevel, cohort))
+                          dbWorkspace, workspaceAccessLevel, cohort, initialCreditsService))
               .collect(Collectors.toList()));
     }
     if (resourceTypes.contains(ResourceType.COHORT_REVIEW)) {
@@ -76,7 +79,7 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
               .map(
                   cohortReview ->
                       workspaceResourceMapper.fromCohortReview(
-                          dbWorkspace, workspaceAccessLevel, cohortReview))
+                          dbWorkspace, workspaceAccessLevel, cohortReview, initialCreditsService))
               .collect(Collectors.toList()));
     }
     if (resourceTypes.contains(ResourceType.CONCEPT_SET)) {
@@ -86,7 +89,7 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
               .map(
                   dbConceptSet ->
                       workspaceResourceMapper.fromDbConceptSet(
-                          dbWorkspace, workspaceAccessLevel, dbConceptSet))
+                          dbWorkspace, workspaceAccessLevel, dbConceptSet, initialCreditsService))
               .collect(Collectors.toList()));
     }
     if (resourceTypes.contains(ResourceType.DATASET)) {
@@ -97,7 +100,7 @@ public class WorkspaceResourcesServiceImpl implements WorkspaceResourcesService 
               .map(
                   dbDataset ->
                       workspaceResourceMapper.fromDbDataset(
-                          dbWorkspace, workspaceAccessLevel, dbDataset))
+                          dbWorkspace, workspaceAccessLevel, dbDataset, initialCreditsService))
               .collect(Collectors.toList()));
     }
     if (resourceTypes.stream().anyMatch(resourceType -> !supportedTypes.contains(resourceType))) {
