@@ -1,31 +1,19 @@
 package org.pmiops.workbench.reporting;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.common.truth.Truth8.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.pmiops.workbench.cohortbuilder.util.QueryParameterValues.rowToInsertStringToOffsetTimestamp;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.INSTITUTION__SHORT_NAME;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.countPopulatedTables;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.createEmptySnapshot;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingDataset;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingInstitution;
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingNewUserSatisfactionSurvey;
 import static org.pmiops.workbench.utils.TimeAssertions.assertTimeApprox;
 
 import com.google.cloud.bigquery.InsertAllRequest;
-import com.google.cloud.bigquery.InsertAllRequest.RowToInsert;
 import com.google.cloud.bigquery.InsertAllResponse;
 import com.google.cloud.bigquery.QueryJobConfiguration;
 import com.google.cloud.bigquery.TableResult;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Multimap;
-import com.google.common.collect.Multimaps;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
@@ -33,21 +21,19 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.IntStream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.pmiops.workbench.FakeClockConfiguration;
 import org.pmiops.workbench.api.BigQueryService;
+import org.pmiops.workbench.db.jdbc.ReportingQueryService;
 import org.pmiops.workbench.db.model.DbUser;
 import org.pmiops.workbench.db.model.DbUser.DbGeneralDiscoverySource;
 import org.pmiops.workbench.db.model.DbUser.DbPartnerDiscoverySource;
 import org.pmiops.workbench.model.BillingStatus;
 import org.pmiops.workbench.model.ReportingCohort;
-import org.pmiops.workbench.model.ReportingDatasetCohort;
 import org.pmiops.workbench.model.ReportingNewUserSatisfactionSurvey;
-import org.pmiops.workbench.model.ReportingSnapshot;
 import org.pmiops.workbench.model.ReportingUser;
 import org.pmiops.workbench.model.ReportingUserGeneralDiscoverySource;
 import org.pmiops.workbench.model.ReportingUserPartnerDiscoverySource;
@@ -59,7 +45,6 @@ import org.pmiops.workbench.reporting.insertion.UserGeneralDiscoverySourceColumn
 import org.pmiops.workbench.reporting.insertion.UserPartnerDiscoverySourceColumnValueExtractor;
 import org.pmiops.workbench.reporting.insertion.WorkspaceColumnValueExtractor;
 import org.pmiops.workbench.testconfig.ReportingTestConfig;
-import org.pmiops.workbench.testconfig.ReportingTestUtils;
 import org.pmiops.workbench.testconfig.fixtures.ReportingTestFixture;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.TestConfiguration;
@@ -79,13 +64,13 @@ public class ReportingUploadServiceTest {
   private static final Instant THEN_INSTANT = Instant.parse("1989-02-17T00:00:00.00Z");
   private static final OffsetDateTime THEN = OffsetDateTime.ofInstant(THEN_INSTANT, ZoneOffset.UTC);
 
-  private ReportingSnapshot reportingSnapshot;
-  private ReportingSnapshot snapshotWithNulls;
   private List<ReportingWorkspace> reportingWorkspaces;
 
   @MockBean private BigQueryService mockBigQueryService;
 
   @Autowired private ReportingUploadService reportingUploadService;
+
+  @Autowired private ReportingTableService reportingTableService;
 
   @Autowired private ReportingTestFixture<DbUser, ReportingUser> userFixture;
 
@@ -94,28 +79,17 @@ public class ReportingUploadServiceTest {
   @TestConfiguration
   @Import({
     FakeClockConfiguration.class,
+    ReportingTableService.class,
+    ReportingTestConfig.class,
     ReportingUploadServiceImpl.class,
-    ReportingTestConfig.class
   })
-  @MockBean({ReportingVerificationService.class})
+  @MockBean({ReportingQueryService.class, ReportingVerificationService.class})
   public static class Config {}
 
   @BeforeEach
   public void setup() {
-    reportingSnapshot =
-        createEmptySnapshot()
-            .captureTimestamp(NOW.toEpochMilli())
-            .datasets(ImmutableList.of(createReportingDataset()))
-            .institutions(ImmutableList.of(createReportingInstitution()));
-
-    snapshotWithNulls =
-        createEmptySnapshot()
-            .captureTimestamp(NOW.toEpochMilli())
-            .datasets(ImmutableList.of(createReportingDataset().description(null)))
-            .institutions(ImmutableList.of(createReportingInstitution().displayName(null)));
-
     reportingWorkspaces =
-        ImmutableList.of(
+        List.of(
             new ReportingWorkspace()
                 .workspaceId(201L)
                 .name("Circle K")
@@ -148,86 +122,6 @@ public class ReportingUploadServiceTest {
   }
 
   @Test
-  public void testUploadSnapshot() {
-    final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
-    doReturn(Collections.emptyMap()).when(mockInsertAllResponse).getInsertErrors();
-
-    doReturn(mockInsertAllResponse)
-        .when(mockBigQueryService)
-        .insertAll(any(InsertAllRequest.class));
-    reportingUploadService.uploadSnapshot(reportingSnapshot);
-
-    // One for institution, one for dataset.
-    verify(mockBigQueryService, times(2)).insertAll(insertAllRequestCaptor.capture());
-    final List<InsertAllRequest> requests = insertAllRequestCaptor.getAllValues();
-
-    // Institution and dataset table
-    assertThat(requests.size()).isEqualTo(countPopulatedTables(reportingSnapshot));
-
-    final Multimap<String, InsertAllRequest> tableIdToInsertAllRequest =
-        Multimaps.index(requests, r -> r.getTable().getTable());
-
-    final Optional<InsertAllRequest> institutionRequest =
-        tableIdToInsertAllRequest.get("institution").stream().findFirst();
-    assertThat(institutionRequest).isPresent();
-    assertThat(institutionRequest.get().getRows()).hasSize(1);
-    final RowToInsert firstInstitutionRow = institutionRequest.get().getRows().get(0);
-    assertThat(firstInstitutionRow.getContent().get("short_name"))
-        .isEqualTo(INSTITUTION__SHORT_NAME);
-  }
-
-  @Test
-  public void testUploadSnapshot_streaming_with_nulls() {
-    final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
-    doReturn(Collections.emptyMap()).when(mockInsertAllResponse).getInsertErrors();
-
-    doReturn(mockInsertAllResponse)
-        .when(mockBigQueryService)
-        .insertAll(any(InsertAllRequest.class));
-    reportingUploadService.uploadSnapshot(snapshotWithNulls);
-
-    // one for institution, one for dataset.
-    verify(mockBigQueryService, times(2)).insertAll(insertAllRequestCaptor.capture());
-    final List<InsertAllRequest> requests = insertAllRequestCaptor.getAllValues();
-
-    // one for institution, one for dataset.
-    assertThat(requests.size()).isEqualTo(countPopulatedTables(snapshotWithNulls));
-
-    final Multimap<String, InsertAllRequest> tableIdToInsertAllRequest =
-        Multimaps.index(requests, r -> r.getTable().getTable());
-
-    final Optional<InsertAllRequest> institutionRequest =
-        tableIdToInsertAllRequest.get("institution").stream().findFirst();
-    assertThat(institutionRequest).isPresent();
-    assertThat(institutionRequest.get().getRows()).hasSize(1);
-    final RowToInsert firstInstitutionRow = institutionRequest.get().getRows().get(0);
-    assertThat(firstInstitutionRow.getContent().get("short_name"))
-        .isEqualTo(INSTITUTION__SHORT_NAME);
-  }
-
-  @Test
-  public void testUploadSnapshot_streaming_empty() {
-    reportingUploadService.uploadSnapshot(ReportingTestUtils.EMPTY_SNAPSHOT);
-    verify(mockBigQueryService, never()).insertAll(any());
-  }
-
-  @Test
-  public void testUploadWithManyBatches() {
-    final ReportingSnapshot largeSnapshot =
-        createEmptySnapshot()
-            .captureTimestamp(NOW.toEpochMilli())
-            .datasetCohorts(
-                IntStream.range(0, 21)
-                    .mapToObj(id -> new ReportingDatasetCohort().cohortId((long) id))
-                    .collect(ImmutableList.toImmutableList()))
-            .cohorts(ImmutableList.of(ReportingTestUtils.createReportingCohort()))
-            .institutions(ImmutableList.of(ReportingTestUtils.createReportingInstitution()));
-
-    reportingUploadService.uploadSnapshot(largeSnapshot);
-    verify(mockBigQueryService, times(12)).insertAll(insertAllRequestCaptor.capture());
-  }
-
-  @Test
   public void testUploadBatch_workspace() {
     final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
 
@@ -236,7 +130,8 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadWorkspaceBatch(reportingWorkspaces, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.workspace(), reportingWorkspaces, NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -261,7 +156,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatch_user() {
     List<ReportingUser> reportingUsers =
-        ImmutableList.of(
+        List.of(
             userFixture.createDto(),
             new ReportingUser().username("ted@aou.biz").disabled(true).userId(202L),
             new ReportingUser().username("socrates@aou.biz").disabled(false).userId(303L),
@@ -273,7 +168,8 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadUserBatch(reportingUsers, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.user(), reportingUsers, NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -288,7 +184,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatch_cohort() {
     List<ReportingCohort> reportingCohorts =
-        ImmutableList.of(
+        List.of(
             new ReportingCohort().cohortId(100L).name("name1"),
             new ReportingCohort().cohortId(200L).name("name2"));
     final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
@@ -298,7 +194,8 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadCohortBatch(reportingCohorts, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.cohort(), reportingCohorts, NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -315,8 +212,7 @@ public class ReportingUploadServiceTest {
     ReportingNewUserSatisfactionSurvey reportingNewUserSatisfactionSurvey =
         createReportingNewUserSatisfactionSurvey();
     List<ReportingNewUserSatisfactionSurvey> reportingNewUserSatisfactionSurveys =
-        ImmutableList.of(
-            reportingNewUserSatisfactionSurvey, new ReportingNewUserSatisfactionSurvey());
+        List.of(reportingNewUserSatisfactionSurvey, new ReportingNewUserSatisfactionSurvey());
     final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
 
     doReturn(Collections.emptyMap()).when(mockInsertAllResponse).getInsertErrors();
@@ -324,8 +220,10 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadNewUserSatisfactionSurveyBatch(
-        reportingNewUserSatisfactionSurveys, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.newUserSatisfactionSurvey(),
+        reportingNewUserSatisfactionSurveys,
+        NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -342,7 +240,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatchUserGeneralDiscoverySource() {
     List<ReportingUserGeneralDiscoverySource> userGeneralDiscoverySources =
-        ImmutableList.of(
+        List.of(
             new ReportingUserGeneralDiscoverySource()
                 .userId(100L)
                 .answer(DbGeneralDiscoverySource.ACTIVITY_PRESENTATION_OR_EVENT.toString()),
@@ -358,8 +256,10 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadUserGeneralDiscoverySourceBatch(
-        userGeneralDiscoverySources, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.userGeneralDiscoverySource(),
+        userGeneralDiscoverySources,
+        NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -378,7 +278,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatchUserPartnerDiscoverySource() {
     List<ReportingUserPartnerDiscoverySource> userPartnerDiscoverySources =
-        ImmutableList.of(
+        Collections.singletonList(
             new ReportingUserPartnerDiscoverySource()
                 .userId(100L)
                 .answer(
@@ -392,8 +292,10 @@ public class ReportingUploadServiceTest {
         .when(mockBigQueryService)
         .insertAll(any(InsertAllRequest.class));
 
-    reportingUploadService.uploadUserPartnerDiscoverySourceBatch(
-        userPartnerDiscoverySources, NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.userPartnerDiscoverySource(),
+        userPartnerDiscoverySources,
+        NOW.toEpochMilli());
 
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
     InsertAllRequest request = insertAllRequestCaptor.getValue();
@@ -415,7 +317,8 @@ public class ReportingUploadServiceTest {
     cohort.setWorkspaceId(101L);
     cohort.setCreatorId(null);
 
-    reportingUploadService.uploadCohortBatch(ImmutableList.of(cohort), NOW.toEpochMilli());
+    reportingUploadService.uploadBatch(
+        reportingTableService.cohort(), Collections.singletonList(cohort), NOW.toEpochMilli());
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
 
     final InsertAllRequest insertAllRequest = insertAllRequestCaptor.getValue();
